--- a/package.json
+++ b/package.json
@@ -5,18 +5,34 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "iphone15": "react-native run-ios --simulator=\"iPhone 15 (17.4)\"",
+    "ipad": "react-native run-ios --simulator=\"iPad Air (5th generation) (17.0)\"",
+    "clean:ios": "rm -f ios/Podfile.lock && rm -rf ios/Pods && rm -rf ios/build",
+    "clean:android": "rm -rf android/app/build && rm -rf android/.gradle",
+    "clean:gradle": "cd android && ./gradlew --stop && ./gradlew clean && ./gradlew cleanBuild && cd ..",
+    "clean:yarn": "rm -rf node_modules/ && rm -f yarn.lock",
+    "pod:install": "cd ios && bundle exec pod install && cd ..",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/elements": "^2.2.5",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "nativewind": "2.0.11",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-device-info": "^14.0.2",
+    "react-native-gesture-handler": "^2.21.2",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
+    "react-native-screens": "^4.4.0",
+    "react-native-svg": "^15.10.1",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
