--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
@@ -26,14 +27,17 @@
     "clsx": "^2.1.1",
     "nativewind": "2.0.11",
     "react": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-native": "0.76.5",
     "react-native-device-info": "^14.0.2",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0",
     "react-native-svg": "^15.10.1",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
