--- a/package.json
+++ b/package.json
@@ -55,8 +55,11 @@
     "@react-native/eslint-config": "0.76.5",
     "@react-native/metro-config": "0.76.5",
     "@react-native/typescript-config": "0.76.5",
+    "@testing-library/react-native": "^12.9.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/redux-mock-store": "^1.5.0",
     "babel-jest": "^29.6.3",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -65,6 +68,7 @@
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
     "reactotron-react-native": "^5.1.9",
+    "redux-mock-store": "^1.5.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
