--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5",
     "@hookform/resolvers": "^3.9.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -34,6 +35,7 @@
     "react-native": "0.76.5",
     "react-native-device-info": "^14.0.2",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-image-crop-picker": "^0.41.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "^3.16.6",
