--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@gorhom/bottom-sheet": "^5",
     "@hookform/resolvers": "^3.9.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
@@ -33,11 +34,13 @@
     "react": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.5",
+    "react-native-animated-pagination-dots": "^0.1.73",
     "react-native-device-info": "^14.0.2",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-image-crop-picker": "^0.41.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mmkv": "^3.2.0",
+    "react-native-pager-view": "^6.6.1",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0",
